[package]
name = "tsmext_core"
version = "0.1.0"
description = "That Sky Mod: External Edition"
authors = ["XeTrinityz"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ThatSkyModExt"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
obfstr = "0.4"
ureq = { version = "2.10", default-features = true }
bcdec_rs = "0.2"
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "s"
